--- a/projects/calculator.html
+++ b/projects/calculator.html
@@ -5,14 +5,14 @@
     <title>Ivan Gavrikov &#8211; Projects</title>
     <!--Meta-->
     <meta charset=utf-8>
-    <link rel="apple-touch-icon" sizes="180x180" href="../../ivan-qa/favicon-apple-180x180.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="../../ivan-qa/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="../../ivan-qa/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="../favicon-apple-180x180.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../favicon-16x16.png">
     <!--Plugins CSS-->
     <!--font-awesome-version 4.7.0-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--Theme CSS-->
-    <link rel="stylesheet" type="text/css" href="../../ivan-qa/styles/main.css">
+    <link rel="stylesheet" type="text/css" href="../styles/main.css">
 </head>
 
 <body id="top">
@@ -30,13 +30,13 @@
             <div class="dark-mode-section">
                 <button class="btn-dark-mode">Dark Mode</button>
             </div>
-            <script src="../../ivan-qa/scripts/dark-mode.js"></script>
+            <script src="../scripts/dark-mode.js"></script>
             <!--top-section-->
             <div class="top-section">
                 <!--header-->
                 <header>
                     <div class="person-info">
-                        <h1 class="name"><a href="../../ivan-qa/index.html"><i class="fa fa-user-o"
+                        <h1 class="name"><a href="../index.html"><i class="fa fa-user-o"
                                     aria-hidden="true"></i>Ivan
                                 Gavrikov</a></h1>
                         <h2 class="position">QA Specialist</h2>
@@ -46,11 +46,11 @@
                 <!--nav-->
                 <nav class="top-nav">
                     <ul>
-                        <li><a href="../../ivan-qa/resume.html">Resume</a></li>
+                        <li><a href="../resume.html">Resume</a></li>
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+                        <li><a href="../projects.html">Projects</a></li>
 
                         <li>|</li>
 
@@ -58,7 +58,7 @@
 
                         <li>|</li>
 
-                        <li><a href="../../ivan-qa/feedback.html">Feedback</a></li>
+                        <li><a href="../feedback.html">Feedback</a></li>
 
                     </ul>
                 </nav>
@@ -68,9 +68,9 @@
         <!--main-nav-menu-->
         <nav class="main-nav">
             <ul>
-                <li><a href="../../ivan-qa/index.html">Main</a></li>
+                <li><a href="../index.html">Main</a></li>
                 <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
-                <li><a href="../../ivan-qa/projects.html">Projects</a></li>
+                <li><a href="../projects.html">Projects</a></li>
                 <li><i class="fa fa-angle-right" aria-hidden="true"></i></li>
                 <li>Calculator</li>
             </ul>
@@ -80,7 +80,7 @@
             <!--main-section-->
             <main class="main-section">
                 <section class="calculator">
-                    <h2 id="calc-anchor"><a href="../../ivan-qa/projects/calculator.html">Simple calculator</a></h2>
+                    <h2 id="calc-anchor"><a href="../projects/calculator.html">Simple calculator</a></h2>
                     
                     <div class="calc-input-section">
                         <h3>Enter a number</h3>
@@ -107,22 +107,22 @@
                     <div class="calc-result-section">
                         <h3>Result</h3>
 
-                        <img id="img-sqr" alt="Square symbol icon">
+                        <img id="img-sqr" src="../images/calc/sqr-512x512.png" alt="Square symbol icon">
                         <p id="p-sqr"></p><br>
-                        <img id="img-cube" alt="Cubic symbol icon">
+                        <img id="img-cube" src="../images/calc/cube-512x512.png" alt="Cubic symbol icon">
                         <p id="p-cube"></p><br>
-                        <img id="img-factorial" alt="Factorial symbol icon">
+                        <img id="img-factorial" src="../images/calc/factorial-512x512.png" alt="Factorial symbol icon">
                         <p id="p-factorial"></p><br>
-                        <img id="img-sqr-root" alt="Square root symbol icon">
+                        <img id="img-sqr-root" src="../images/calc/sqr-root-512x512.png" alt="Square root symbol icon">
                         <p id="p-sqr-root"></p><br>
-                        <img id="img-cube-root" alt="Cubic root symbol icon">
+                        <img id="img-cube-root" src="../images/calc/cube-root-512x512.png" alt="Cubic root symbol icon">
                         <p id="p-sqr-cubic-root"></p><br>
-                        <img id="img-circle-length" alt="Circle length symbol icon">
+                        <img id="img-circle-length" src="../images/calc/circle-length-512x512.png" alt="Circle length symbol icon">
                         <p id="p-circle-length"></p>
 
                     </div>
 
-                    <script src="../../ivan-qa/scripts/calculator.js"></script>
+                    <script src="../scripts/calculator.js"></script>
 
                 </section>
                 
@@ -151,7 +151,7 @@
                 <!--footer-section-4-->
                 <li>
                     <h2>2023 - Ivan Gavrikov</h2>
-                    <a href="../../ivan-qa/index.html">Quality Assurance Specialist</a>
+                    <a href="../index.html">Quality Assurance Specialist</a>
                 </li>
             </ul>
         </footer>
