Added visitor counter

--- a/index.html
+++ b/index.html
@@ -409,6 +409,13 @@
                     <h2><i class="fa fa-envelope-o" aria-hidden="true"></i>Email</h2>
                     <a href="mailto:gifvan@gmail.com" target="_blank">gifvan@gmail.com</a>
                 </li>
+
+                <!--visitor-counter-->
+                <li>
+                    <a href='https://www.free-counters.org/'>www.free-counters.org</a> <script type='text/javascript' src='https://www.freevisitorcounters.com/auth.php?id=e74f84e1cc2ce7f4452b6002c47b98aaef141acd'></script>
+                    <script type="text/javascript" src="https://www.freevisitorcounters.com/en/home/counter/1098265/t/4"></script>
+                </li>
+
                 <!--footer-section-3-->
                 <li>
                     <h2>Follow Me</h2>
@@ -420,6 +427,9 @@
                     <h2>2023 - Ivan Gavrikov</h2>
                     <a href="index.html">Quality Assurance Specialist</a>
                 </li>
+
+                
+                
             </ul>
         </footer>
     </div>
