Minor resume changes

--- a/resume.html
+++ b/resume.html
@@ -41,11 +41,10 @@
                                     class="fa fa-linkedin" aria-hidden="true"></i>LinkedIn</a></li>
                     </ul>
                 </div>
-                <a href="https://drive.google.com/file/d/1A3qB7azCA0Xa61lu_Vu-p-8J22vxuHe8/view?usp=sharing"
+                <a href="https://drive.google.com/file/d/1Lg2G4XbzJLf-ZFrvG95X7B6FGpkp8Nzt/view?usp=sharing"
                     class="btn-simple" rel="external">Resume in PDF</a>
             </div>
-            <a href="index.html"><img class="avatar" src="images/avatar.jpg" width="180"
-                    alt="Photo Ivan Gavrikov"></a>
+            <a href="index.html"><img class="avatar" src="images/avatar.jpg" width="180" alt="Photo Ivan Gavrikov"></a>
         </header>
         <!--main-wrapper-->
         <div class="main-wrapper">
@@ -89,16 +88,18 @@
                         </div>
                         <p>
                             Perform testing of extensive number of web platforms, desktop and mobile applications from
-                            leading vendors on freelance platforms.
+                            leading vendors.
                         </p>
                         <div class="job-info">
                             <ul class="job-info-list">
                                 <li>performing test execution, capturing test evidence and logging defects in sanity,
-                                    smoke, usability,
-                                    integration, system integration, regression, GUI and UAT test cycles;</li>
-                                <li>creating detailed test scripts based on design;</li>
+                                    smoke, usability, integration, system integration, regression, GUI and UAT test
+                                    cycles;</li>
+                                <li>creating detailed test scripts based on product design;</li>
                                 <li>mapping and tracing design/requirements with test scripts;</li>
-                                <li>collaborating closely with other team members;</li>
+                                <li>collaborating closely with other team members to drive continuous improvement in the
+                                    testing process;</li>
+                                <li>keeping up-to-date on new testing tools, methodologies and best practices.</li>
                             </ul>
                         </div>
                     </section>
@@ -112,14 +113,14 @@
                                 <h3 class="job-title">Technical Department Manager</h3>
                                 <div class="date">January 2021 - March 2022</div>
                             </div>
-                            <div class="company-name">LLC Cirex</div>
+                            <div class="company-name">LLC TELECOM EXCHANGE</div>
                         </div>
                         <div class="job-info">
                             <ul class="job-info-list">
                                 <li>determined the scope, budget, and schedules for existing and new projects;</li>
+                                <li>managed testing process to implement a new version of the internal software;</li>
                                 <li>developed mitigation and restoration procedures for emergency conditions on the
                                     cable network;</li>
-                                <li>managed testing process to implement a new version of the internal software;</li>
                                 <li>recruited, trained and managed a team of 11 employees;</li>
                                 <li>guided junior employees to achieve project goals;</li>
                                 <li>worked and reported in CRM system;</li>
@@ -136,20 +137,19 @@
                                 <h3 class="job-title">QA Tester</h3>
                                 <div class="date">September 2019 – October 2020</div>
                             </div>
-                            <div class="company-name">LLC Cirex</div>
+                            <div class="company-name">LLC TELECOM EXCHANGE</div>
                         </div>
                         <p>
                             Took an active part in the migration of the cable database to a software for internal needs.
                         </p>
                         <div class="job-info">
                             <ul class="job-info-list">
-                                <li>developed requirements for the future product with software team and telecom
-                                    department;
+                                <li>developed product requirements with product owners, software developers and telecom
+                                    engineers;
                                 </li>
-                                <li>wrote test cases and executed them with telecom engineering team (mostly for
-                                    functional
-                                    black-box/gray-box and regression testing);</li>
-                                <li>planned testing of the software and weekly meetings;</li>
+                                <li>planned testing activities and weekly meetings;</li>
+                                <li>wrote and executed test cases;</li>
+                                <li>provided test reports and improvement analysis to the product owners;</li>
                                 <li>helped with maintenance support after the successful implementation of the project.
                                 </li>
                             </ul>
@@ -166,7 +166,7 @@
                                 <h3 class="job-title">Telecom Lead Engineer</h3>
                                 <div class="date">May 2018 – December 2020</div>
                             </div>
-                            <div class="company-name">LLC Cirex</div>
+                            <div class="company-name">LLC TELECOM EXCHANGE</div>
                         </div>
                         <div class="job-info">
                             <ul class="job-info-list">
@@ -196,7 +196,7 @@
                                 <h3 class="job-title">Telecom Field Engineer</h3>
                                 <div class="date">June 2017 – May 2018</div>
                             </div>
-                            <div class="company-name">LLC Cirex</div>
+                            <div class="company-name">LLC TELECOM EXCHANGE</div>
                         </div>
                         <div class="job-info">
                             <ul class="job-info-list">
@@ -349,7 +349,8 @@
                             <a class="edu-link"
                                 href="https://drive.google.com/file/d/1CkX5663JitqozrHIpwBnaW5SVjDa_GMd/view?usp=sharing"
                                 rel="external">
-                                Continious Integration with Jenkins<i class="fa fa-external-link" aria-hidden="true"></i></a>
+                                Continious Integration with Jenkins<i class="fa fa-external-link"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -360,7 +361,8 @@
                             <a class="edu-link"
                                 href="https://drive.google.com/file/d/1CkX5663JitqozrHIpwBnaW5SVjDa_GMd/view?usp=sharing"
                                 rel="external">
-                                Codeless Test Automation with Selenium IDE<i class="fa fa-external-link" aria-hidden="true"></i></a>
+                                Codeless Test Automation with Selenium IDE<i class="fa fa-external-link"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -371,7 +373,8 @@
                             <a class="edu-link"
                                 href="https://drive.google.com/file/d/1G5Atd2STiWa3xaCOzQqoYMbYU17P6Gg2/view?usp=sharing"
                                 rel="external">
-                                Exploring Service APIs through Test Automation<i class="fa fa-external-link" aria-hidden="true"></i></a>
+                                Exploring Service APIs through Test Automation<i class="fa fa-external-link"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -383,7 +386,8 @@
                             <a class="edu-link"
                                 href="https://udemy-certificate.s3.amazonaws.com/image/UC-9a870c08-70a1-40cb-ad1f-8a633e09f4ec.jpg?v=1664399788000"
                                 rel="external">
-                                ISTQB Foundation Level 2022 Complete Training<i class="fa fa-external-link" aria-hidden="true"></i></a>
+                                ISTQB Foundation Level 2022 Complete Training<i class="fa fa-external-link"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </section>
 
@@ -406,7 +410,8 @@
                             <a class="edu-link"
                                 href="https://drive.google.com/file/d/1YSw7_WfbXzv_L4Ys9vo_4Ydt7-KHHaCb/view?usp=sharing"
                                 rel="external">
-                                Introdution to User Experience Design<i class="fa fa-external-link" aria-hidden="true"></i></a>
+                                Introdution to User Experience Design<i class="fa fa-external-link"
+                                    aria-hidden="true"></i></a>
                         </div>
                     </section>
 
