--- a/resume.html
+++ b/resume.html
@@ -81,7 +81,7 @@
                     <section>
                         <div class="meta">
                             <div class="upper-row">
-                                <h3 class="job-title">QA Specialist (freelance)</h3>
+                                <h3 class="job-title">Quality Assurance Specialist (freelance)</h3>
                                 <div class="date">June 2022 – Present</div>
                             </div>
                             <div class="company-name">uTest</div>
@@ -92,13 +92,11 @@
                         </p>
                         <div class="job-info">
                             <ul class="job-info-list">
-                                <li>performing test execution, capturing test evidence and logging defects in sanity,
-                                    smoke, usability, integration, system integration, regression, GUI and UAT test
-                                    cycles;</li>
+                                <li>performing test execution, capturing test evidence and logging defects in sanity, smoke, usability, integration,
+                                    system integration, regression, GUI and UAT test cycles;</li>
                                 <li>creating detailed test scripts based on product design;</li>
                                 <li>mapping and tracing design/requirements with test scripts;</li>
-                                <li>collaborating closely with other team members to drive continuous improvement in the
-                                    testing process;</li>
+                                <li>collaborating closely with other team members to drive continuous improvement in the testing process;</li>
                                 <li>keeping up-to-date on new testing tools, methodologies and best practices.</li>
                             </ul>
                         </div>
@@ -117,14 +115,13 @@
                         </div>
                         <div class="job-info">
                             <ul class="job-info-list">
-                                <li>determined the scope, budget, and schedules for existing and new projects;</li>
+                                <li>determined the scope, budget, and schedules for existing and new ISP & OSP telecommunications projects;</li>
                                 <li>managed testing process to implement a new version of the internal software;</li>
                                 <li>developed mitigation and restoration procedures for emergency conditions on the
                                     cable network;</li>
                                 <li>recruited, trained and managed a team of 11 employees;</li>
                                 <li>guided junior employees to achieve project goals;</li>
-                                <li>worked and reported in CRM system;</li>
-                                <li>provided reports for product owners.</li>
+                                <li>provided reports to product owners.</li>
                             </ul>
                         </div>
                     </section>
@@ -134,24 +131,20 @@
                         <!--Job-title-->
                         <div class="meta">
                             <div class="upper-row">
-                                <h3 class="job-title">QA Tester</h3>
+                                <h3 class="job-title">Quality Assurance Tester</h3>
                                 <div class="date">September 2019 – October 2020</div>
                             </div>
                             <div class="company-name">LLC TELECOM EXCHANGE</div>
                         </div>
                         <p>
-                            Took an active part in the migration of the cable database to a software for internal needs.
+                            Took an active part in the creation of the internal software solution to store a network database in Agile environment.
                         </p>
                         <div class="job-info">
                             <ul class="job-info-list">
-                                <li>developed product requirements with product owners, software developers and telecom
-                                    engineers;
-                                </li>
+                                <li>developed business and functional requirements with software development team and telecom department;</li>
+                                <li>designed and executed test plans, scripts and test reports to product owners;</li>
                                 <li>planned testing activities and weekly meetings;</li>
-                                <li>wrote and executed test cases;</li>
-                                <li>provided test reports and improvement analysis to the product owners;</li>
-                                <li>helped with maintenance support after the successful implementation of the project.
-                                </li>
+                                <li>helped with maintenance support after the successful implementation of the project.</li>
                             </ul>
                         </div>
                     </section>
@@ -170,19 +163,12 @@
                         </div>
                         <div class="job-info">
                             <ul class="job-info-list">
-                                <li>scheduled cable connections in accordance with the set deadlines (reached up to 50%
-                                    cost
-                                    reduction for the unique b2b client);</li>
-                                <li>performed large cable reconfigurations (more than 70 b2b clients and 150 services);
-                                </li>
-                                <li>obtained the necessary permits for work performance on cable lines and in
-                                    datacenters;
-                                </li>
-                                <li>maintained the database and maps of cable lines and fibers;</li>
-                                <li>registered and eliminated emergencies by means of contractors (coordinated up to 20
-                                    people at the same time during the large cable reconfigurations);</li>
-                                <li>issued specifications for cable lines located in reconstruction zones of the city.
-                                </li>
+                                <li>scheduled and planned new fiber optics connections to reach cost efficiency with existed customers;</li>
+                                <li>performed large cable re-configurations based on the maintenance schedule;</li>
+                                <li>obtained the necessary permits for work on inside and outside plant infrastructures;</li>
+                                <li>negotiated with public authorities to meet project goals and deadlines;</li>
+                                <li>registered and solved emergencies on variety cable networks in accordance to SLAs;</li>
+                                <li>maintained maps and network databases in GIS and CAD software.</li>
                             </ul>
                         </div>
                     </section>
@@ -193,19 +179,15 @@
                         <!--Job-title-->
                         <div class="meta">
                             <div class="upper-row">
-                                <h3 class="job-title">Telecom Field Engineer</h3>
+                                <h3 class="job-title">Field Engineer</h3>
                                 <div class="date">June 2017 – May 2018</div>
                             </div>
                             <div class="company-name">LLC TELECOM EXCHANGE</div>
                         </div>
                         <div class="job-info">
                             <ul class="job-info-list">
-                                <li>installed telecommunication equipment in 15 datacenters and at over 300 client
-                                    sites;
-                                </li>
-                                <li>used the equipment for installation, measurement and testing of fiber optics
-                                    (Optical
-                                    Time Demand Reflectometers - EXFO FTB-200, 500; Anritsu).</li>
+                                <li>installed and maintained telecommunications equipment in 15 datacenters and at over 300 client sites;</li>
+                                <li>provided status of current and completed tasks to customers and engineers to meet SLAs.</li>
                             </ul>
                         </div>
                     </section>
@@ -216,7 +198,7 @@
                         <!--Job-title-->
                         <div class="meta">
                             <div class="upper-row">
-                                <h3 class="job-title">Telecom Maintenance Engineer</h3>
+                                <h3 class="job-title">Maintenance Engineer</h3>
                                 <div class="date">July 2015 – June 2017</div>
                             </div>
                             <div class="company-name">LLC MTS</div>
@@ -227,13 +209,9 @@
                                 Moscow.
                             </p>
                             <ul class="job-info-list">
-                                <li>maintained a database and map of cables and cable line structures; </li>
-                                <li>registered the emergencies on cable lines and gave the directions to contractors to
-                                    eliminate them;</li>
-                                <li>coordinated the design project documentation issuance for the construction of roads
-                                    and
-                                    automatic traffic control system, inspected the construction sites;</li>
-                                <li>updated cable network map in AutoCAD and MS Visio.</li>
+                                <li>maintained maps and network databases in GIS and CAD software;</li>
+                                <li>registered the emergencies on cable lines and collaborated with contractors to eliminate them;</li>
+                                <li>coordinated a project documentation issuance of automatic traffic control system on construction sites.</li>
                             </ul>
                         </div>
                     </section>
@@ -247,17 +225,12 @@
                                 <h3 class="job-title">Technical Support Engineer</h3>
                                 <div class="date">May 2015 – July 2015</div>
                             </div>
-                            <div class="company-name">LLC MANGO TELECOM</div>
+                            <div class="company-name">LLC MTS</div>
                         </div>
                         <div class="job-info">
-                            <p>
-                                The company specialized in the provision of virtual PBX services.
-                            </p>
                             <ul class="job-info-list">
-                                <li>processed the incoming calls and requests in the CRM system (Layer-1 of technical
-                                    support);</li>
-                                <li>analyzed and troubleshooted issues in VoIP-telephony (Gigaset, D-Link, Yealink,
-                                    Panasonic, Cisco).</li>
+                                <li>processed the incoming calls and requests in the CRM system (Layer-1 of technical support);</li>
+                                <li>analyzed and troubleshooted issues in VoIP-telephony (Gigaset, D-Link, Yealink, Panasonic, Cisco).</li>
                             </ul>
                         </div>
                     </section>
@@ -278,21 +251,10 @@
                                 The company specialized in construction of cable communication lines.
                             </p>
                             <ul class="job-info-list">
-                                <li>prepared design project documentation for:<br>
-                                    - construction of fiber optic cable lines (FOCL) using FTTH/GPON technology
-                                    in
-                                    Moscow
-                                    and Moscow region;<br>
-                                    - tie-ins and reconfiguration of current cable lines for Orange Business
-                                    Services
-                                    (French telecommunication company);<br>
-                                    - construction of transport interchange hubs using GPON technology;<br>
-                                    - construction of the Intelligent Traffic System (ITS) in Moscow;
-                                </li>
-                                <li>calculated the quantities from design project documentation and checked the cost
-                                    estimates;</li>
-                                <li>interacted with contractors;</li>
-                                <li>finalized GPON and ITS projects within the set timeframes.</li>
+                                <li>prepared design project documentation for FTTH/GPON and Intelligent Traffic System (ITS) projects in Moscow region;</li>
+                                <li>maintained re-configurations of fiber and copper cable lines for Orange Business ISP;</li>
+                                <li>calculated the quantities from design project documentation and checked the cost estimates;</li>
+                                <li>interacted with contractors and field engineers to meet project goals and deadlines.</li>
                             </ul>
                         </div>
                     </section>
@@ -303,7 +265,7 @@
                         <!--Job-title-->
                         <div class="meta">
                             <div class="upper-row">
-                                <h3 class="job-title">Telecom Field Engineer</h3>
+                                <h3 class="job-title">Field Engineer</h3>
                                 <div class="date">June 2012 – July 2013</div>
                             </div>
                             <div class="company-name">LLC Alkor-Expert</div>
@@ -313,12 +275,10 @@
                                 The company specialized in construction and maintenance of cable communication lines.
                             </p>
                             <ul class="job-info-list">
-                                <li>installed SCN systems, fiber optic cable lines (FOCL) and passive equipment (using
-                                    Japanese fiber welding equipment (Fujikura));</li>
-                                <li>prepared technical documentation for the new and existing telecommunication lines;
-                                </li>
-                                <li>managed the procurement of the equipment;</li>
-                                <li>administrated a small server on Windows.</li>
+                                <li>used fusion splicers, strippers, tweezers, polishing and cleaning supplies, OTDR, Fiber Identifier, Power Meter,
+                                    and Fiber Scope to install and maintain fiber optics equipment (PON, OLT, ONU, racks, routers, switchers);</li>
+                                <li>prepared technical documentation for new and existed telecommunications lines;</li>
+                                <li>managed the procurement of the equipment by using Windows server.</li>
                             </ul>
                         </div>
                     </section>
